[project]
name = "steam-night-demo"
version = "1.0.0"
description = "Kid-friendly CS/Cyber demo for elementary school STEAM night"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "requests>=2.32.0",
    "rich>=13.7.0",
]

[project.scripts]
cyber-server = "cyber.cli:run_server"
cyber-crack = "cyber.cli:run_cracker"
cs-demo = "cs.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cyber", "src/cs"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]